fix: Alignment Issue_1

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
+  max-width: auto;
   margin: 0 auto;
-  /* text-align: center; */
+  text-align: center;
 }
 
 body {
